# libqalculate-android

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mrkenhoff/libqalculate/: ExampleInstrumentedTest.kt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/mrkenhoff/libqalculate/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mrkenhoff/libqalculate/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt  build.gradle  libqalculate.i  liqalculate_util.patch
lib/src/androidTest/java/com/jherkenhoff/libqalculate/: CalculatorTest.java
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: CMakeLists.txt  libqalculate.i  native-lib.cpp
